# solclassis

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/solclassis/: Cargo.toml
programs/solclassis/src/: lib.rs
solclassis-app/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
solclassis-app/src/app/: globals.css  layout.tsx  page.tsx
solclassis-app/src/app/about/: page.tsx
solclassis-app/src/app/api/campaigns/: route.ts
solclassis-app/src/app/api/createCampaign/: route.ts
solclassis-app/src/app/api/fetchCampaigns/: route.ts
solclassis-app/src/app/campaign/[id]/: page.tsx
solclassis-app/src/app/campaign/[pubkey]/: page.tsx
solclassis-app/src/app/campaigns/: page.tsx
solclassis-app/src/app/create/: page.tsx
solclassis-app/src/components/: CampaignForm.tsx  CampaignList.tsx  DonateButton.tsx  Footer.tsx  NavBar.tsx  WalletConnect.tsx  WalletModal.tsx
solclassis-app/src/contexts/: WalletContext.tsx
solclassis-app/src/hooks/: useProgram.ts
solclassis-app/src/idl/: solclassis.json
solclassis-app/src/types/: campaign.ts
solclassis-app/src/utils/: createCampaign.ts  donate.ts  fetchCampaigns.ts  solana.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  tower-1_9-4Z3bLjQPKjDDPYSqEUmPtyaUiFZGJeH5joYuTjT8JcDv.bin.new  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  IDENTITY  LOG  LOG.old.1741181879279635  MANIFEST-000063
tests/: solclassis.ts
(+5 files in other folders)
